Added example showing how to use QuaGroup for sl3 computations

--- a/sl3_manual_example.ipynb
+++ b/sl3_manual_example.ipynb
@@ -2,99 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb09da14",
+   "execution_count": 22,
+   "id": "d99c37fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sage.algebras import quantum_groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5f86019e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "q"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k.<q> = CyclotomicField(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7f6cbddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0*v0"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#example of quantum sl3 acting on a Verma module with weight (1,0,0)\n",
+    "Q = QuantumGroup(['A',3])\n",
+    "B = Q.lower_half()\n",
+    "V = Q.highest_weight_module([1,0,0])\n",
+    "F1, F2 = Q.F_simple()\n",
+    "q = Q.q()\n",
+    "B = Q.lower_half()\n",
+    "x = B(q^-2*F1*F2^2*F1) #random element of Uq(sl3)\n",
+    "v = V.highest_weight_vector() #random element of M_(1,0,0)\n",
+    "x.lift() * v    #in order to interpret this as an action of unrolled quantum group,\n",
+    "                #just need to cancel down any factors of E^r and F^r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "cd49cb76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0*v0"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "ca574f04",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9be48285",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "F[a1]*F[a1+a2]^(4)*F[a2]^(3)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q = QuantumGroup(['A',3])\n",
-    "B = Q.lower_half()\n",
-    "basis = B.basis()\n",
-    "basis[1,4,3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "641ee85d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(F[a1],\n",
-       " F[a1+a2],\n",
-       " F[a2],\n",
-       " F[a1+a2+a3],\n",
-       " F[a2+a3],\n",
-       " F[a3],\n",
-       " K1,\n",
-       " (-q + q^-1)*[ K1 ; 1 ] + K1,\n",
-       " K2,\n",
-       " (-q + q^-1)*[ K2 ; 1 ] + K2,\n",
-       " K3,\n",
-       " (-q + q^-1)*[ K3 ; 1 ] + K3,\n",
-       " E[a1],\n",
-       " E[a1+a2],\n",
-       " E[a2],\n",
-       " E[a1+a2+a3],\n",
-       " E[a2+a3],\n",
-       " E[a3])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q.gens()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "cbe56013",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-q + q^-1)*[ K1 ; 1 ]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Q.gens()[7]-Q.gens()[6]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "853ab663",
+   "id": "e426a3f0",
    "metadata": {},
    "outputs": [],
    "source": []
